# mullvad-connection-status

./: .gitattributes  .gitignore  .prettierignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: build-test.yml  release.yml
scripts/: generate-tray-icons.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vpn_checker.rs
src/components/: ConnectionDetails.tsx  Settings.tsx  StatusCard.tsx
src/components/ui/: badge.tsx  card.tsx
src/hooks/: useDarkMode.tsx
src/lib/: utils.ts
